# relay

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.e2e  LICENSE  PROVIDERS.md  README.md  SECURITY.md  install.sh
.cursor/: hooks.json
.entire/: settings.json
.github/workflows/: changelog.yml  ci.yml  homebrew.yml  release.yml
52/a996960529/: metadata.json
52/a996960529/0/: metadata.json  prompt.txt
5c/6d3f3e8b0e/: metadata.json
5c/6d3f3e8b0e/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
74/a0e5f231fc/: metadata.json
74/a0e5f231fc/0/: content_hash.txt  context.md  full.jsonl  metadata.json
74/a0e5f231fc/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
docs/: changelog-automation.md  debugging.md  e2e-container.md  smoke-container.md  weekly-compat-pr.md
docs/compat/: verified-versions.toml
scripts/: compat-e2e.sh  compat-smoke.sh  compat-weekly.env.example  e2e-container.sh  e2e-inside.sh  sandbox-core.sh  sandbox.sh  seed-sandbox.sh  setup-test-env.sh  smoke-container.sh  smoke-inside.sh  smoke-interactive-core.sh  smoke-interactive.sh  smoke-seed.sh  weekly-compat-pr.sh
src/: atomic.rs  blacklist.rs  capabilities.rs  config.rs  daemon.rs  history.rs  init.rs  logging.rs  main.rs  markers.rs  path_cleanup.rs  process_lock.rs  report.rs  tools.rs  versions.rs  watch.rs
src/sync/: agents.rs  codex_commands.rs  commands.rs  mod.rs  rules.rs  shared.rs  skills.rs  test_support.rs
tests/: scoped_cli.rs
